# montevideo-bus-forecast

./: .gitignore  10th_decile.csv  README.md  montevideo_bus_forecast.ipynb  pyproject.toml  slurm_mvd_bus_forecast.sh
data/processed/: adyacency_matrix.csv  from_to_weight.csv  nx_graph.json
data/processed/bus_stops/: bus_stop_ordered_103.geojson  bus_stop_ordered_110.geojson  bus_stop_ordered_137.geojson  bus_stop_ordered_145.geojson  bus_stop_ordered_163.geojson  bus_stop_ordered_183.geojson  bus_stop_ordered_185.geojson  bus_stop_ordered_306.geojson  bus_stop_ordered_405.geojson  bus_stop_ordered_546.geojson  bus_stop_ordered_G.geojson  bus_stops_proc_103.geojson  bus_stops_proc_110.geojson  bus_stops_proc_137.geojson  bus_stops_proc_145.geojson  bus_stops_proc_163.geojson  bus_stops_proc_183.geojson  bus_stops_proc_185.geojson  bus_stops_proc_306.geojson  bus_stops_proc_405.geojson  bus_stops_proc_546.geojson  bus_stops_proc_G.geojson  snap_bus_stops_to_bus_track_103.geojson  (+10 more)
notebook/eda/: plots.py  stm_bus_data.py
notebooks/eda/: plots.py  stm_bus_data.py
src/modeling/: montevideo_bus_dataset.py  stgcn_montevideo_bus_dataset.py  stgcn_on_mvd_bus_dataset.py
src/preparation/: constants.py  download_bus_stops.py  download_bus_time_by_stop.py  download_bus_tracks.py  download_stm_bus_data.py  stm_bus_data.py  typer_messages.py  utils.py
src/processing/: build_adyacency_matrix.py  build_bus_line_tracks_and_stops.py  build_features_matrix.py  build_graph.py  process_stm_bus_data.py  sort_bus_stops_along_bus_track.py  utils.py
(+22 files in other folders)
