[tool.poetry]
name = "montevideo_bus_forecast"
version = "0.1.0"
description = "Trabajo final del curso Aprendizaje Automático para Datos en Grafos de la Facultad de Ingeniería de la Universidad de la República"
authors = ["Guzmán López <guzmanlop@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
typer = "^0.3.2"
pretty-errors = "^1.2.19"
pandas = "^1.2.3"
geopandas = "^0.9.0"
altair = "^4.1.0"
pygeos = "^0.9"
matplotlib = "^3.4.1"
networkx = "^2.5.1"
sklearn = "^0.0"
torch = {version = "1.8.0", python = "^3.9", platform = "linux"}
torch-scatter = {version = "^2.0.6", python = "^3.9", platform = "linux"}
torch-sparse = {version = "^0.6.9", python = "^3.9", platform = "linux"}
torch-cluster = {version = "^1.5.9", python = "^3.9", platform = "linux"}
torch-spline-conv = {version = "^1.2.1", python = "^3.9", platform = "linux"}
bokeh = "^2.3.1"
isort = {extras = ["black"], version = "^5.8.0"}

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
bpython = "^0.21"
flake8 = "^3.9.0"
black = "^20.8b1"
isort = "^5.8.0"
ipykernel = "^5.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
